--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 console.log(imageBloc);
                 /* Modifier background-image par contenu de large image url */
                 document.getElementById ( 'image-dog' ) .style.backgroundImage =  'url (https://pixabay.com/get/54e7dd464a55a814f6da8c7dda7936781d3adfe153556c4870267ad59048cc5ebc_1280.jpg)';
-            
+            /* Commentaires */
             })
             .catch(error => alert("Erreur : " + error));
         
